[gd_scene load_steps=2 format=3 uid="uid://c1s431lbfbycn"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_7hnoq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hnoq")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 400

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 150
text = "CBS ENERGY"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="Button_vibraciones" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Vibraciones"

[node name="Button_presion" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Presiones"

[node name="Button_fluviometro" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
disabled = true
text = "Histografía"

[node name="VBoxContainer3" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="Button_logout" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Cerrar Sesión"

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Usuario: "

[node name="Label_username" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "user"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Rol: "

[node name="Label_rol" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 75

[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer/Button_vibraciones" to="." method="_on_button_vibraciones_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer/Button_presion" to="." method="_on_button_presion_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer/Button_fluviometro" to="." method="_on_button_fluviometro_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer3/Button_logout" to="." method="_on_button_logout_pressed"]
